--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
     <script src="./models/world.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/charcter.class.js"></script>
@@ -12,9 +13,11 @@
     <script src="./models/chicken.class.js"></script>
     <script src="./models/background-object.class.js"></script>
     <script src="./models/keyboard.class.js"></script>
+    <script src="./models/endboss.class.js"></script>
     <script src="./models/level.class.js"></script>
     <script src="./levels/level1.js"></script>
     <script src="./js/game.js"></script>
+    
 </head>
 <body onload="init()">
     <h1>El pollo loco</h1>
