Add Coinbar and function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script src="./models/drawable-object.class.js"></script>
     <script src="./models/status-bar.class.js"></script>
+    <script src="./models/coin-bar.class.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/charcter.class.js"></script>
