--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
     <script src="./models/drawable-object.class.js"></script>
     <script src="./models/status-bar.class.js"></script>
     <script src="./models/coin-bar.class.js"></script>
+    <script src="./models/bottle-bar.class.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
+    <script src="./models/throwableObject.class.js"></script>
     <script src="./models/charcter.class.js"></script>
     <script src="./models/cloud.class.js"></script>
     <script src="./models/chicken.class.js"></script>
