--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./models/background-object.class.js"></script>
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/endboss.class.js"></script>
+    <script src="./models/collact-bottled.class.js"></script>
     <script src="./models/coin.class.js"></script>
     <script src="./models/level.class.js"></script>
     <script src="./levels/level1.js"></script>
