--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./models/status-bar.class.js"></script>
     <script src="./models/coin-bar.class.js"></script>
     <script src="./models/bottle-bar.class.js"></script>
+    <script src="./models/endboss-bar.class.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/throwableObject.class.js"></script>
