--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="./models/endboss.class.js"></script>
     <script src="./models/collact-bottled.class.js"></script>
     <script src="./models/coin.class.js"></script>
+    <script src="./models/rock.class.js"></script>
     <script src="./models/level.class.js"></script>
     <script src="./levels/level1.js"></script>
     <script src="./js/game.js"></script>
