Main song and mute function

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="upper-menu">
                 <div class="settings">
                     <img src="./img/downloads/fullscreen-icon.png" alt="">
-                    <img src="./img/downloads/volume-on.png" alt="">
+                    <img onclick="muteSong()" src="./img/downloads/volume-on.png" alt="">
                     <img src="./img/downloads/gamepad-icon.png" alt="">
                 </div>
                 <div onclick="startGame(), init()" id="start-btn">
