--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img id="volume" onclick="toggleVolume()" src="./img/downloads/volume-on.png" alt="">
                     <img src="./img/downloads/gamepad-icon.png" alt="">
                 </div>
-                <div onclick="startGame(), init()" id="start-btn">
+                <div onclick="startGame()" id="start-btn">
                     <span>Start Game</span>
                 </div>
             </div>
