Start working endScreen

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 </div>
             </div>
         </div>
+        <div id="game-over-title"> </div>
         <canvas id="canvas" width="720" height="480">
     </div>
     </canvas>
