Endscreen and endbutton

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
                 </div>
             </div>
         </div>
-        <div id="game-over-title"> </div>
+        <div id="game-over-title"> 
+            <div class="endscreen-buttons">
+                <button>Restart Game</button>
+                <button>Main Menu</button>
+            </div>
+        </div>
         <canvas id="canvas" width="720" height="480">
     </div>
     </canvas>
