Back to menu or restart game if endboss dead

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </div>
         <div id="game-over-title"> 
             <div class="endscreen-buttons">
-                <button>Restart Game</button>
-                <button>Main Menu</button>
+                <button onclick="startGame()">Restart Game</button>
+                <button onclick="mainMenu()">Main Menu</button>
             </div>
         </div>
         <canvas id="canvas" width="720" height="480">
