--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
                 </div>
             </div>
         </div>
-        <div id="game-over-title"> 
+        <div id="game-over-title">
+            <div class="endscreen-buttons">
+                <button onclick="startGame()">Restart Game</button>
+                <button onclick="mainMenu()">Main Menu</button>
+            </div>
+        </div>
+        <div id="game-loose-title">
             <div class="endscreen-buttons">
                 <button onclick="startGame()">Restart Game</button>
                 <button onclick="mainMenu()">Main Menu</button>
