Add Touch functions

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
         </div>
         <div id="touch-panels">
             <div id="left-side">
-                <div class="touch-button"> <img id="left-img" src="./img/downloads/left_arrow.png" alt=""> </div>
-                <div class="touch-button"> <img id="right-img" src="img/downloads/right_arrow.png" alt=""></div>  
+                <div id="left-touch-btn" class="touch-button"> <img id="left-img" src="./img/downloads/left_arrow.png" alt=""> </div>
+                <div id="right-touch-btn" class="touch-button"> <img id="right-img" src="img/downloads/right_arrow.png" alt=""></div>  
             </div>
             <div id="right-side">
-                <div class="touch-button"> <img id="jump-img" src="./img/downloads/arrow_up.png" alt=""> </div>
-                <div class="touch-button"> <img id="throw-img" src="img/6_salsa_bottle/2_salsa_bottle_on_ground.png" alt=""></div>  
+                <div id="jump-touch-btn" class="touch-button"> <img id="jump-img" src="./img/downloads/arrow_up.png" alt=""> </div>
+                <div id="throw-touch-btn" class="touch-button"> <img id="throw-img" src="img/6_salsa_bottle/2_salsa_bottle_on_ground.png" alt=""></div>  
             </div>
         </div>
         <canvas id="canvas" width="720" height="480">
