Clean Code and responsive fixes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="upper-menu">
                 <div id="settings" class="settings">
                     <img onclick="pauseGame()" id="pause-img" src="./img/downloads/pause.png" alt="">
-                    <img onclick=" fullScreen()" src="./img/downloads/fullscreen-icon.png" alt="">
+                    <img id="full-screen-icon" onclick=" fullScreen()" src="./img/downloads/fullscreen-icon.png" alt="">
                     <img id="volume" onclick="toggleVolume()" src="./img/downloads/volume-on.png" alt="">
                     <img onclick="showKeyboardAssignments()" src="./img/downloads/gamepad-icon.png" alt="">
                 </div>
