min height 155 aboveground bug

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
+    <link rel="shortcut icon" href="img/6_salsa_bottle/2_salsa_bottle_on_ground.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El Pollo Loco</title>
 
     <script src="./models/drawable-object.class.js"></script>
     <script src="./models/status-bar.class.js"></script>
