Turn device screen

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 <button onclick="startGame()">Restart Game</button>
                 <button onclick="showKeyboardAssignments()">Key Assignment</button>
                 <button onclick="toggleVolume()">Sound : <span id="menu-volume">On</span></button>
-                <button id="screen-info" onclick="fullScreen()">Screen Size: <span id="screen-size-info">Normal</span></button>
+                <button id="screen-info" onclick="fullScreen()">Screen Size: <span
+                        id="screen-size-info">Normal</span></button>
             </div>
         </div>
         <div id="assignment-screen">
@@ -111,6 +112,10 @@
                 <div id="throw-touch-btn" class="touch-button"> <img id="throw-img"
                         src="img/6_salsa_bottle/2_salsa_bottle_on_ground.png" alt=""></div>
             </div>
+        </div>
+
+        <div id="turn-device-screen">
+            <span>Please turn the device to play the game</span>
         </div>
         <canvas id="canvas" width="720" height="480"></canvas>
     </div>
